Fixed white space in contact us

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body{
     margin:0;
     font-family: 'orange_kidregular';
+    background-color: #E7E0D8
 }
 
 /* NAV BAR STYLE*/
